Created menu with icons

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -9,14 +9,33 @@
 </head>
 <body>
 
-<header class="header">
-    <nav>
-        <li>BB</li>
-        <li>Home</li>
-        <li>Resume</li>
-        <li>GitHub</li>
-        <li>LinkedIn</li>
-        <li>"Email"</li>
-    </nav>
+<header class="header flex">
+    <div class="logo flex">
+        <img src="assets/images/mdi--letter-b-circle.svg">
+        <img src="assets/images/mdi--letter-b-circle-outline.svg">
+    </div>
+    <div class="nav flex">
+        <div class="nav-item flex">
+            <img src="assets/images/mdi--home.svg" alt="Home Icon">
+            <p>Home</p>
+        </div>
+        <div class="nav-item flex">
+            <img src="assets/images/mdi--file-document.svg" alt="Resume Icon">
+            <p>Resume</p>
+        </div>
+        <div class="nav-item flex">
+            <img src="assets/images/mdi--github.svg" alt="GitHub Icon">
+            <p>GitHub</p>
+        </div>
+        <div class="nav-item flex">
+            <img src="assets/images/mdi--linkedin.svg" alt="LinkedIn Icon">
+            <p>LinkedIn</p>
+        </div>
+        <div class="nav-item flex">
+            <img src="assets/images/mdi--email-outline.svg" alt="Email Icon">
+            <p>Email</p>
+        </div>
+    </div>
+</header>
 </body>
 </html>
