header: layout and assets

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -9,33 +9,43 @@
 </head>
 <body>
 
-<header class="header flex">
-    <div class="logo flex">
-        <img src="assets/images/mdi--letter-b-circle.svg">
-        <img src="assets/images/mdi--letter-b-circle-outline.svg">
-    </div>
-    <div class="nav flex">
-        <div class="nav-item flex">
-            <img src="assets/images/mdi--home.svg" alt="Home Icon">
-            <p>Home</p>
+    <header>
+        <div class="header">
+            <div class="nav-logo">
+                <img src="assets/images/nav-b-outline.png">
+            </div>
+
+            <nav class="nav-menu">
+                <div class="nav-item">
+                    <img src="assets/images/nav-home.png" alt="Home Icon">
+                    <p>Home</p>
+                </div>
+                <div class="nav-item">
+                    <img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon">
+                    <p>LinkedIn</p>
+                </div>
+                <div class="nav-item">
+                    <img src="assets/images/nav-github.png" alt="GitHub Icon">
+                    <p>GitHub</p>
+                </div>
+                <div class="nav-item">
+                    <img src="assets/images/nav-resume.png" alt="Resume Icon">
+                    <p>Resume</p>
+                </div>
+                <div class="nav-item">
+                    <img src="assets/images/nav-contact.png" alt="Contact Icon">
+                    <p>Contact</p>
+                </div>
+                <div class="nav-item">
+                    <img src="assets/images/nav-hamburger-icon.png" alt="Hamburger Icon">
+                </div>
+            </nav>
         </div>
-        <div class="nav-item flex">
-            <img src="assets/images/mdi--file-document.svg" alt="Resume Icon">
-            <p>Resume</p>
-        </div>
-        <div class="nav-item flex">
-            <img src="assets/images/mdi--github.svg" alt="GitHub Icon">
-            <p>GitHub</p>
-        </div>
-        <div class="nav-item flex">
-            <img src="assets/images/mdi--linkedin.svg" alt="LinkedIn Icon">
-            <p>LinkedIn</p>
-        </div>
-        <div class="nav-item flex">
-            <img src="assets/images/mdi--email-outline.svg" alt="Email Icon">
-            <p>Email</p>
-        </div>
-    </div>
-</header>
+    </header>
+
+    <main class="main">main</main>
+
+    <footer class="footer">footer</footer>
+
 </body>
 </html>
