hero: created section

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barron Bytes | Software Developer</title>
-    <link rel="stylesheet" href="assets/css/reset.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="assets/css/reset.css" rel="stylesheet" >
+    <link href="assets/css/style.css" rel="stylesheet" >
 </head>
 <body>
 
@@ -40,6 +40,13 @@
                     <img src="assets/images/nav-hamburger-icon.png" alt="Hamburger Icon">
                 </div>
             </nav>
+        </div>
+
+        <div class="hero">
+            <h2><span class="header-orange">print</span>("Hi! I'm <span class="header-white">Jonathan</span>.")</h2>
+            <img src="assets/images/hero-laptop.png" alt="laptop image">
+            <h2><span class="header-white">Software Developer</span> and Educator.</h2>
+            <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
         </div>
     </header>
 
