hero-cta: added section

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -41,14 +41,22 @@
                 </div>
             </nav>
         </div>
+    </header>
 
+    <div class="hero-cta">
         <div class="hero">
             <h2><span class="header-orange">print</span>("Hi! I'm <span class="header-white">Jonathan</span>.")</h2>
             <img src="assets/images/hero-laptop.png" alt="laptop image">
             <h2><span class="header-white">Software Developer</span> and Educator.</h2>
             <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
         </div>
-    </header>
+
+        <div class="cta"><div class="cta-container">
+            <h4># Let's Solve Your Challenges Together</h4>
+            <p>My coding spark began as a teacher when I discovered how to streamline my workflow using Desmos code. Since then, I have expanded my skills through diverse projects. Explore my skills and portfolio to see how my experience can add value to your business.</p>
+            <a href="#" class="cta-button">Get in Touch</a>
+        </div></div>
+    </div>
 
     <main class="main">main</main>
 
