hero-cta: button

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -52,9 +52,9 @@
         </div>
 
         <div class="cta"><div class="cta-container">
-            <h4># Let's Solve Your Challenges Together</h4>
-            <p>My coding spark began as a teacher when I discovered how to streamline my workflow using Desmos code. Since then, I have expanded my skills through diverse projects. Explore my skills and portfolio to see how my experience can add value to your business.</p>
-            <a href="#" class="cta-button">Get in Touch</a>
+            <h4># Let's Work Together</h4>
+            <p>Hello! My passion for teaching sparked a love for coding. Now, I create impactful full-stack projects. Ready to collaborate on your next challenge? Let's connect!</p>
+            <a href="#" class="button cta-button">Get in Touch</a>
         </div></div>
     </div>
 
