--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -45,7 +45,7 @@
 
     <div class="hero-cta">
         <div class="hero">
-            <h2><span class="header-orange">print</span>("Hi! I'm <span class="header-white">Jonathan</span>.")</h2>
+            <h2><span class="header-orange">print</span>("Awesome <span class="header-white">apps</span>.")</h2>
             <img src="assets/images/hero-laptop.png" alt="laptop image">
             <h2><span class="header-white">Software Developer</span> and Educator.</h2>
             <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
