about-cta: added section

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -45,18 +45,21 @@
 
     <div class="hero-cta">
         <div class="hero">
-            <h2><span class="header-orange">print</span>("Awesome <span class="header-white">apps</span>.")</h2>
+            <h2>print("<span class="header-green">Awesome</span> apps.")</h2>
             <img src="assets/images/hero-laptop.png" alt="laptop image">
-            <h2><span class="header-white">Software Developer</span> and Educator.</h2>
+            <h2><span class="header-green">Software Developer</span> and Educator.</h2>
             <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
         </div>
-
-        <div class="cta"><div class="cta-container">
-            <h4># Let's Work Together</h4>
-            <p>Hello! My passion for teaching sparked a love for coding. Now, I create impactful full-stack projects. Ready to collaborate on your next challenge? Let's connect!</p>
-            <a href="#" class="button cta-button">Get in Touch</a>
-        </div></div>
     </div>
+
+    <div class="about-cta"><div class="about-container">
+        <img src="assets/images/about-photo.png" alt="photo of myself programming">
+        
+        <div class="about">
+            <p>Hello! My passion for teaching sparked a love for coding. Now, I create impactful full-stack projects. Ready to collaborate on your next challenge? Let's connect!</p>
+            <a href="#" class="button cta-button">Get in Touch</a>           
+        </div>
+    </div></div>
 
     <main class="main">main</main>
 
