about: updated content

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -56,8 +56,11 @@
         <img src="assets/images/about-photo.png" alt="photo of myself programming">
         
         <div class="about">
-            <p>Hello! My passion for teaching sparked a love for coding. Now, I create impactful full-stack projects. Ready to collaborate on your next challenge? Let's connect!</p>
-            <a href="#" class="button cta-button">Get in Touch</a>           
+            <h2>Hi! I'm Jonathan.</h2>
+            <h6>I've completed 5+ projects for clients as a contractor, and I'm here to help you.</h6>
+            <p>My superpower is proactivity. Three years as a teacher sharpened my ability to spot challenges early and act decisively, fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and seamlessly integrated in-demand technologies like AI.</p>
+            <p>I GOT you.</p>
+            <a href="#" class="button about-cta-button">Work With Me</a>           
         </div>
     </div></div>
 
