problem: added section

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -52,15 +52,28 @@
         </div>
     </div>
 
-    <div class="about-cta"><div class="about-container">
-        <img src="assets/images/about-photo.png" alt="photo of myself programming">
+    <div class="problem-cta"><div class="problem-container">
+        <div class="problem">
+            <h2>Hiring is Hard!</h2>
+            <h6>Finding the right skill and fit is key.</h6>
+            <ul>
+                <li>One</li>
+                <li>Two</li>
+                <li>Three</li>
+            </ul>
+        </div>
+        <img src="assets/images/problem-candidates.png" alt="photo of selecting one out of many job applicants">
+    </div></div>
+
+    <div class="solution-cta"><div class="solution-container">
+        <img src="assets/images/solution-photo.png" alt="photo of myself programming">
         
-        <div class="about">
+        <div class="solution">
             <h2>Hi! I'm Jonathan.</h2>
             <h6>I've completed 5+ projects for clients as a contractor, and I'm here to help you.</h6>
             <p>My superpower is proactivity. Three years as a teacher sharpened my ability to spot challenges early and act decisively, fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and seamlessly integrated in-demand technologies like AI.</p>
             <p>I GOT you.</p>
-            <a href="#" class="button about-cta-button">Work With Me</a>           
+            <a href="#" class="button solution-cta-button">Work With Me</a>           
         </div>
     </div></div>
 
