problem: list background image

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -57,9 +57,9 @@
             <h2>Hiring is Hard!</h2>
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
-                <li>One</li>
-                <li>Two</li>
-                <li>Three</li>
+                <li><a href="#" title="View my skills and certifications">Want to reduce onboarding <span class="text-green">time</span> and <span class="text-green">costs</span>?</a></li>
+                <li><a href="#" title="Review my portfolio projects">Need candidates with real-world <span class="text-green">experience</span>?</a></li>
+                <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="text-green">culture alignment</span>?</a></li>
             </ul>
         </div>
         <img src="assets/images/problem-candidates.png" alt="photo of selecting one out of many job applicants">
@@ -73,7 +73,7 @@
             <h6>I've completed 5+ projects for clients as a contractor, and I'm here to help you.</h6>
             <p>My superpower is proactivity. Three years as a teacher sharpened my ability to spot challenges early and act decisively, fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and seamlessly integrated in-demand technologies like AI.</p>
             <p>I GOT you.</p>
-            <a href="#" class="button solution-cta-button">Work With Me</a>           
+            <a class="button solution-cta-button" href="#">Work With Me</a>           
         </div>
     </div></div>
 
