--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -77,7 +77,27 @@
         </div>
     </div></div>
 
-    <main class="main">main</main>
+    <div class="benefits-cta">
+        <h2>Instant Value Provided</h2>
+        <div class="benefits">
+            <div class="front-end">
+                <img src="assets/images/benefits-frontend.png">
+                <h6>User Engagement</h6>
+            </div>
+
+            <div class="back-end">
+                <img src="assets/images/benefits-backend.png">
+                <h6>Scalability & Security</h6>
+            </div>
+
+            <div class="credentials">
+                <img src="assets/images/benefits-credentials.png">
+                <h6>Industry Certifications</h6>
+            </div>
+        </div>
+    </div>
+
+    <main class="main">Main</main>
 
     <footer class="footer">footer</footer>
 
