--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -82,17 +82,33 @@
         <div class="benefits">
             <div class="front-end">
                 <img src="assets/images/benefits-frontend.png">
-                <h6>User Engagement</h6>
+                <h6>Maximized Engagement</h6>
+                <p>Empower your business with solutions that captivate and convert.
+                    By leveraging analytics, I create designs that increase user loyalty.</p>
+                <p class="benefits-title">Languages:</p>
+                <p>JavaScript</p>
+                <p class="benefits-title">Frameworks:</p>
+                <p>Angular, React</p>
             </div>
 
             <div class="back-end">
                 <img src="assets/images/benefits-backend.png">
                 <h6>Scalability & Security</h6>
+                <p>Deliver products that grow with your business. 
+                    I design applications with proper safeguards, ensuring peace of mind as you scale.</p>
+                <p class="benefits-title">Languages:</p>
+                <p>Python, Java</p>
+                <p class="benefits-title">Frameworks:</p>
+                <p>Django, Spring Boot</p>
             </div>
 
             <div class="credentials">
                 <img src="assets/images/benefits-credentials.png">
                 <h6>Industry Certifications</h6>
+                <p>Gain access to reliable solutions built on verified industry knowledge. 
+                    My expertise delivers results aligned with proven standards.</p>
+                <p class="benefits-title">Cloud:</p>
+                <p>AWS Certified Cloud Pratitioner</p>    
             </div>
         </div>
     </div>
