--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -115,7 +115,22 @@
 
     <main class="main">Main</main>
 
-    <footer class="footer">footer</footer>
+    <footer><div class="footer">
+        <div class="footer-1">
+            <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png"></a>
+        </div>
+        <div class="footer-2">
+            <h1>Let's Collaborate</h1>
+            <p>Ready to discuss full-time opportunities or freelance projects? 
+                I'm here to deliver results for you.</p>
+            <a class="button footer-cta" href="#">Message Me About Your Needs</a>
+        </div>
+        <div class="footer-3">
+            <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon"></a>
+            <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="GitHub Icon"></a>
+            <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Resume Icon"></a>
+        </div>
+    </div></footer>
 
 </body>
 </html>
