benefits-section: refactor

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -77,41 +77,57 @@
         </div>
     </div></div>
 
-    <div class="benefits-cta">
-        <h2>Instant Value Provided</h2>
-        <div class="benefits">
-            <div class="front-end">
-                <img src="assets/images/benefits-frontend.png">
-                <h6>Maximized Engagement</h6>
-                <p>Empower your business with solutions that captivate and convert.
+    <div class="benefits-section"><div class="benefits">
+        <div class="benefits-1"><h2>Instant Value Provided</h2></div>
+        <div class="benefits-2">
+            <div class="benefits-2-item">
+                <div class="benefits-title">
+                    <img src="assets/images/benefits-frontend.png">
+                    <h6>Maximized Engagement</h6>
+                    <p>Empower your business with solutions that captivate and convert.
                     By leveraging analytics, I create designs that increase user loyalty.</p>
-                <p class="benefits-title">Languages:</p>
-                <p>JavaScript</p>
-                <p class="benefits-title">Frameworks:</p>
-                <p>Angular, React</p>
+                </div>
+                <div>
+                    <p>Languages:</p>
+                    <p>JavaScript</p>
+                </div>
+                <div>
+                    <p>Frameworks:</p>
+                    <p>Angular, React</p>
+                </div>
             </div>
 
-            <div class="back-end">
-                <img src="assets/images/benefits-backend.png">
-                <h6>Scalability & Security</h6>
-                <p>Deliver products that grow with your business. 
-                    I design applications with proper safeguards, ensuring peace of mind as you scale.</p>
-                <p class="benefits-title">Languages:</p>
-                <p>Python, Java</p>
-                <p class="benefits-title">Frameworks:</p>
-                <p>Django, Spring Boot</p>
+            <div class="benefits-2-item">
+                <div class="benefits-title">
+                    <img src="assets/images/benefits-backend.png">
+                    <h6>Scalability & Security</h6>
+                    <p>Deliver products that grow with your business. 
+                        I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
+                </div>
+                <div>
+                    <p>Languages:</p>
+                    <p>Python, Java</p>                        
+                </div>
+                <div>
+                    <p>Frameworks:</p>
+                    <p>Django, Spring Boot</p>                        
+                </div>
             </div>
 
-            <div class="credentials">
-                <img src="assets/images/benefits-credentials.png">
-                <h6>Industry Certifications</h6>
-                <p>Gain access to reliable solutions built on verified industry knowledge. 
-                    My expertise delivers results aligned with proven standards.</p>
-                <p class="benefits-title">Cloud:</p>
-                <p>AWS Certified Cloud Pratitioner</p>    
+            <div class="benefits-2-item">
+                <div class="benefits-title">
+                    <img src="assets/images/benefits-credentials.png">
+                    <h6>Industry Certifications</h6>
+                    <p>Gain access to reliable solutions built on verified industry knowledge. 
+                        My expertise delivers results aligned with proven standards.</p>    
+                </div>
+                <div>
+                    <p>Cloud:</p>
+                    <p>AWS Certified Cloud Pratitioner</p>        
+                </div>
             </div>
         </div>
-    </div>
+    </div></div>
 
     <main class="main">Main</main>
 
