--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -65,15 +65,17 @@
         <img src="assets/images/problem-candidates.png" alt="photo of selecting one out of many job applicants">
     </div></div>
 
-    <div class="solution-cta"><div class="solution-container">
-        <img src="assets/images/solution-photo.png" alt="photo of myself programming">
-        
-        <div class="solution">
+    <div class="solutions-section"><div class="solutions">   
+        <div class="solutions-1">
             <h2>Hi! I'm Jonathan.</h2>
             <h6>I've completed 5+ projects for clients as a contractor, and I'm here to help you.</h6>
             <p>My superpower is proactivity. Three years as a teacher sharpened my ability to spot challenges early and act decisively, fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and seamlessly integrated in-demand technologies like AI.</p>
-            <p>I GOT you.</p>
-            <a class="button solution-cta-button" href="#">Work With Me</a>           
+            <p>I GOT you.</p>      
+        </div>
+
+        <div class="solutions-2">
+            <img src="assets/images/solutions-photo.png" alt="photo of myself programming">
+            <a class="button solutions-cta" href="#">Work With Me</a>     
         </div>
     </div></div>
 
