problems-section: refactored

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -52,8 +52,9 @@
         </div>
     </div>
 
-    <div class="problem-cta"><div class="problem-container">
-        <div class="problem">
+    <div class="problems-section"><div class="problems">
+        <div class="problems-1"><img src="assets/images/problems-photo.png" alt="photo of selecting one out of many job applicants"></div>
+        <div class="problems-2">
             <h2>Hiring is Hard!</h2>
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
@@ -62,7 +63,6 @@
                 <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="text-green">culture alignment</span>?</a></li>
             </ul>
         </div>
-        <img src="assets/images/problem-candidates.png" alt="photo of selecting one out of many job applicants">
     </div></div>
 
     <div class="solutions-section"><div class="solutions">   
