CSS grid and flexbox refactoring

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -12,47 +12,48 @@
     <header>
         <div class="header">
             <div class="nav-logo">
-                <img src="assets/images/nav-b-outline.png">
+                <a href="#" title="Barron Bytes | Software Developer"><img src="assets/images/nav-b-outline.png"></a>
             </div>
 
             <nav class="nav-menu">
                 <div class="nav-item">
-                    <img src="assets/images/nav-home.png" alt="Home Icon">
-                    <p>Home</p>
+                    <a href="#" title="Return Home"><img src="assets/images/nav-home.png" alt="Home Icon"></a>
+                    <p><a href="#" title="Return Home">Home</a></p>
                 </div>
                 <div class="nav-item">
-                    <img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon">
-                    <p>LinkedIn</p>
+                    <a href="#" title="View My Work History"><img src="assets/images/nav-linkedin.png" alt="LinkedIn Icon"></a>
+                    <p><a href="#" title="View My Work History">LinkedIn</a></p>
                 </div>
                 <div class="nav-item">
-                    <img src="assets/images/nav-github.png" alt="GitHub Icon">
-                    <p>GitHub</p>
+                    <a href="#" title="Review My Portfolio Projects"><img src="assets/images/nav-github.png" alt="GitHub Icon"></a>
+                    <p><a href="#" title="Review My Portfolio Projects">GitHub</a></p>
                 </div>
                 <div class="nav-item">
-                    <img src="assets/images/nav-resume.png" alt="Resume Icon">
-                    <p>Resume</p>
+                    <a href="#" title="Check My Resume"><img src="assets/images/nav-resume.png" alt="Resume Icon"></a>
+                    <p><a href="#" title="Check My Resume">Resume</a></p>
                 </div>
                 <div class="nav-item">
-                    <img src="assets/images/nav-contact.png" alt="Contact Icon">
-                    <p>Contact</p>
+                    <a href="#" title="Message Me"><img src="assets/images/nav-contact.png" alt="Contact Icon"></a>
+                    <p><a href="#" title="Message Me">Contact</a></p>
                 </div>
                 <div class="nav-item">
-                    <img src="assets/images/nav-hamburger-icon.png" alt="Hamburger Icon">
+                    <a href="#" title="Open Mobile Menu"><img src="assets/images/nav-hamburger-icon.png" alt="Hamburger Icon"></a>
                 </div>
             </nav>
         </div>
     </header>
 
-    <div class="hero-cta">
-        <div class="hero">
-            <h2>print("<span class="header-green">Awesome</span> apps.")</h2>
-            <img src="assets/images/hero-laptop.png" alt="laptop image">
+    <div class="hero-section">
+        <div><h2>print("<span class="header-green">Awesome</span> apps.")</h2></div>
+        <div><img src="assets/images/hero-laptop.png" alt="laptop image"></div>
+        <div>
             <h2><span class="header-green">Software Developer</span> and Educator.</h2>
-            <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
+            <p>I build <span class="highlight-orange">clickable</span> and <span class="highlight-orange">scalable</span> solutions, 
+                integrating and creating robust <span class="highlight-orange">APIs</span>.</p>
         </div>
     </div>
 
-    <div class="problems-section"><div class="problems">
+    <div class="problems-section">
         <div class="problems-1"><img src="assets/images/problems-photo.png" alt="photo of selecting one out of many job applicants"></div>
         <div class="problems-2">
             <h2>Hiring is Hard!</h2>
@@ -63,7 +64,7 @@
                 <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="text-green">culture alignment</span>?</a></li>
             </ul>
         </div>
-    </div></div>
+    </div>
 
     <div class="solutions-section"><div class="solutions">   
         <div class="solutions-1">
