--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -59,9 +59,9 @@
             <h2>Hiring is Hard!</h2>
             <h6>Finding the right skill and fit is key.</h6>
             <ul>
-                <li><a href="#" title="View my skills and certifications">Want to reduce onboarding <span class="text-green">time</span> and <span class="text-green">costs</span>?</a></li>
-                <li><a href="#" title="Review my portfolio projects">Need candidates with real-world <span class="text-green">experience</span>?</a></li>
-                <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="text-green">culture alignment</span>?</a></li>
+                <li><a href="#" title="View my skills and certifications">Want to reduce onboarding <span class="bold-green">time</span> and <span class="bold-green">costs</span>?</a></li>
+                <li><a href="#" title="Review my portfolio projects">Need candidates with real-world <span class="bold-green">experience</span>?</a></li>
+                <li><a href="#" title="Read my testimonials">Trouble ensuring strong <span class="bold-green">culture alignment</span>?</a></li>
             </ul>
         </div>
     </div>
@@ -69,9 +69,10 @@
     <div class="solutions-section"><div class="solutions">   
         <div class="solutions-1">
             <h2>Hi! I'm Jonathan.</h2>
-            <h6>I've completed 5+ projects for clients as a contractor, and I'm here to help you.</h6>
-            <p>My superpower is proactivity. Three years as a teacher sharpened my ability to spot challenges early and act decisively, fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and seamlessly integrated in-demand technologies like AI.</p>
-            <p>I GOT you.</p>      
+            <h6>I've completed <span class="underline-orange">5+ projects</span> for clients as a contractor, and I'm here to help you.</h6>
+            <p>My superpower is <span class="underline-orange">proactivity</span>. Three years teaching sharpened my ability to spot challenges early and act decisively, 
+                fueling my passion for coding. Collaborating with clients, I've enhanced user engagement and integrated in-demand technologies like <span class="underline-orange">AI</span>.</p>
+            <p><span class="underline-orange">I GOT you.</span></p>      
         </div>
 
         <div class="solutions-2">
@@ -91,11 +92,11 @@
                     By leveraging analytics, I create designs that increase user loyalty.</p>
                 </div>
                 <div>
-                    <p>Languages:</p>
+                    <p class="benefits-title">Languages:</p>
                     <p>JavaScript</p>
                 </div>
                 <div>
-                    <p>Frameworks:</p>
+                    <p class="benefits-title">Frameworks:</p>
                     <p>Angular, React</p>
                 </div>
             </div>
@@ -108,11 +109,11 @@
                         I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
                 </div>
                 <div>
-                    <p>Languages:</p>
+                    <p class="benefits-title">Languages:</p>
                     <p>Python, Java</p>                        
                 </div>
                 <div>
-                    <p>Frameworks:</p>
+                    <p class="benefits-title">Frameworks:</p>
                     <p>Django, Spring Boot</p>                        
                 </div>
             </div>
@@ -125,7 +126,7 @@
                         My expertise delivers results aligned with proven standards.</p>    
                 </div>
                 <div>
-                    <p>Cloud:</p>
+                    <p class="benefits-title">Cloud:</p>
                     <p>AWS Certified Cloud Pratitioner</p>        
                 </div>
             </div>
