portfolio-section: added

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -133,7 +133,20 @@
         </div>
     </div></div>
 
-    <main class="main">Main</main>
+    <main class="main">
+        <div class="portfolio-section">
+            <div class="portfolio-1">
+                <h2>My Recent Work</h2>
+                <p>Explore apps I've built for clients and myself. Want to learn more? Let's connect!</p>
+            </div>
+        </div>
+
+        <div class="portfolio-2">
+            <div class="project">
+                <a href="#" title="project title"><img src="assets/images/project-photo.jpg" alt="project description"></a>
+            </div>
+        </div>
+    </main>
 
     <footer><div class="footer">
         <div class="footer-1">
