portfolio-section: created

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -139,11 +139,36 @@
                 <h2>My Recent Work</h2>
                 <p>Explore apps I've built for clients and myself. Want to learn more? Let's connect!</p>
             </div>
-        </div>
 
-        <div class="portfolio-2">
-            <div class="project">
-                <a href="#" title="project title"><img src="assets/images/project-photo.jpg" alt="project description"></a>
+            <div class="portfolio-2">
+                <div class="project group">
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-2">
+                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
+                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
+                    </div>
+                </div>
+                <div class="project group">
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-2">
+                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
+                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
+                    </div>
+                </div>
+                <div class="project group">
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-2">
+                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
+                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
+                    </div>
+                </div>
+                <div class="project group">
+                    <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
+                    <div class="project-2">
+                        <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
+                        <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
