javscript: project-card-toggle effects

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -6,6 +6,7 @@
     <title>Barron Bytes | Software Developer</title>
     <link href="assets/css/reset.css" rel="stylesheet" >
     <link href="assets/css/style.css" rel="stylesheet" >
+    <script src="assets/js/project-card-toggle.js" defer></script>
 </head>
 <body>
 
@@ -85,48 +86,48 @@
         <div class="benefits-1"><h2>Instant Value Provided</h2></div>
         <div class="benefits-2">
             <div class="benefits-2-item">
-                <div class="benefits-title">
+                <div class="benefits-info">
                     <img src="assets/images/benefits-frontend.png">
                     <h6>Maximized Engagement</h6>
                     <p>Empower your business with solutions that captivate and convert.
                     By leveraging analytics, I create designs that increase user loyalty.</p>
                 </div>
                 <div>
-                    <p class="benefits-title">Languages:</p>
+                    <p class="bold-normal">Languages:</p>
                     <p>JavaScript</p>
                 </div>
                 <div>
-                    <p class="benefits-title">Frameworks:</p>
+                    <p class="bold-normal">Frameworks:</p>
                     <p>Angular, React</p>
                 </div>
             </div>
 
             <div class="benefits-2-item">
-                <div class="benefits-title">
+                <div class="benefits-info">
                     <img src="assets/images/benefits-backend.png">
                     <h6>Scalability & Security</h6>
                     <p>Deliver products that grow with your business. 
                         I design applications with proper safeguards, ensuring peace of mind as you scale.</p>    
                 </div>
                 <div>
-                    <p class="benefits-title">Languages:</p>
+                    <p class="bold-normal">Languages:</p>
                     <p>Python, Java</p>                        
                 </div>
                 <div>
-                    <p class="benefits-title">Frameworks:</p>
+                    <p class="bold-normal">Frameworks:</p>
                     <p>Django, Spring Boot</p>                        
                 </div>
             </div>
 
             <div class="benefits-2-item">
-                <div class="benefits-title">
+                <div class="benefits-info">
                     <img src="assets/images/benefits-credentials.png">
                     <h6>Industry Certifications</h6>
                     <p>Gain access to reliable solutions built on verified industry knowledge. 
                         My expertise delivers results aligned with proven standards.</p>    
                 </div>
                 <div>
-                    <p class="benefits-title">Cloud:</p>
+                    <p class="bold-normal">Cloud:</p>
                     <p>AWS Certified Cloud Pratitioner</p>        
                 </div>
             </div>
@@ -137,7 +138,8 @@
         <div class="portfolio-section">
             <div class="portfolio-1">
                 <h2>My Recent Work</h2>
-                <p>Explore apps I've built for clients and myself. Want to learn more? Let's connect!</p>
+                <p>Explore apps I've built for clients and myself. Want to learn more? 
+                    <span class="underline-orange"><a href="#" title="Message Me">Let's Connect</a></span></p>
             </div>
 
             <div class="portfolio-2">
