testimonials-section: added

--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -150,6 +150,7 @@
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
                     </div>
                 </div>
+
                 <div class="project group">
                     <div class="project-1"><a href="#"><img src="assets/images/project-photo.jpg" alt="project description"></a></div>
                     <div class="project-2">
@@ -170,6 +171,29 @@
                         <h6>Adipiscing, elit sapien hendrerit vulputate vehicula.</h6>
                         <a class="button footer-cta" href="#" title="Check Out The Details">Open My Project</a>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="testimonials-section">
+            <div class="testimonials-1">
+                <h2>Testimonials</h2>
+                <p>What people have said about the apps I've crafted...</p>
+            </div>
+
+            <div class="testimonials-2">
+                <div class="quote">
+                    <div class="quote-1"><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="previous-testimonial"></a></div>
+                    <div class="quote-2">
+                        <div class="person">
+                            <img src="assets/images/testimonial-person.png" alt="photo-of-advocate">
+                            <a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
+                                Est proculdubio generis designatoris cui confidere potes."</blockquote></a>
+                            <h6><span class="underline-orange">Jane Doe</span></h6>
+                            <p><span class="bold-normal">Work Title</span>, Some Company</p>
+                        </div>
+                    </div>
+                    <div class="quote-3"><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="next-testimonial"></a></div>
                 </div>
             </div>
         </div>
