--- a/Portfolio-Website/index.html
+++ b/Portfolio-Website/index.html
@@ -182,18 +182,18 @@
             </div>
 
             <div class="testimonials-2">
-                <div class="quote">
-                    <div class="quote-1"><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="previous-testimonial"></a></div>
-                    <div class="quote-2">
-                        <div class="person">
-                            <img src="assets/images/testimonial-person.png" alt="photo-of-advocate">
-                            <a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
-                                Est proculdubio generis designatoris cui confidere potes."</blockquote></a>
-                            <h6><span class="underline-orange">Jane Doe</span></h6>
-                            <p><span class="bold-normal">Work Title</span>, Some Company</p>
-                        </div>
-                    </div>
-                    <div class="quote-3"><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="next-testimonial"></a></div>
+                <div class="quote-1"><img src="assets/images/testimonial-person.png" alt="photo-of-advocate"></div>
+
+                <div class="quote-2">
+                    <div><a href="#" title="Previous Advocate"><img src="assets/images/testimonials-left.png" alt="previous-testimonial"></a></div>
+                    <div><a href="#" title="See How We Worked Together"><blockquote class="group">"Mattus erat voluptas laborare nobiscum et speramus iterum cooperari. 
+                        Est proculdubio generis designatoris cui confidere potes."</blockquote></a></div>
+                    <div><a href="" title="Next Advocate"><img src="assets/images/testimonials-right.png" alt="next-testimonial"></a></div>
+                </div>
+
+                <div class="quote-3">
+                    <h6><span class="underline-orange">Jane Doe</span></h6>
+                    <p><span class="bold-normal">Work Title</span>, Some Company</p>
                 </div>
             </div>
         </div>
